# FusionRAG

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  import_only.bat  milvus_viewer.py  pyproject.toml  start_all.bat  stop_all.bat
app/clients/: milvus_utils.py  minio_utils.py  mongo_history_utils.py  neo4j_utils.py
app/conf/: bailian_mcp_config.py  embedding_config.py  lm_config.py  milvus_config.py  mineru_config.py  minio_config.py  reranker_config.py
app/core/: load_prompt.py  logger.py
app/import_process/agent/: main_graph.py  state.py
app/import_process/agent/nodes/: node_bge_embedding.py  node_document_split.py  node_entry.py  node_import_milvus.py  node_item_name_recognition.py  node_md_img.py  node_pdf_to_md.py
app/import_process/api/: import_server.py
app/lm/: embedding_utils.py  lm_utils.py  reranker_utils.py
app/query_process/agent/: main_graph.py  state.py
app/query_process/agent/nodes/: node_answer_output.py  node_item_name_confirm.py  node_rerank.py  node_rrf.py  node_search_embedding.py  node_search_embedding_hyde.py  node_web_search_mcp.py
app/query_process/api/: query_server.py
app/query_process/page/: chat.html
app/query_process/sse/: sse_step_1.py  sse_step_2.py
app/test/: test_import_main_graph.py  test_query_main_graph.py
app/tool/: download_bgem3.py  download_reranker.py
app/utils/: escape_milvus_string_utils.py  normalize_sparse_vector.py  path_util.py  rate_limit_utils.py  sse_utils.py  task_utils.py
src/data_agent/: __init__.py  agent.py  config.py  tools.py
