[project]
name = "data-agent"
version = "0.1.0"
description = "通用 AI 数据代理 — 可复用的数据处理、分析和 AI 交互工具包"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "asyncmy>=0.2.11",
    "cryptography>=48.0.0",
    "elasticsearch[async]>=8,<9",
    "fastapi[standard]>=0.136.1",
    "huggingface-hub>=1.14.0",
    "jieba>=0.42.1",
    "langchain>=1.3.0",
    "langchain-deepseek>=1.0.1",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.0",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.49",
    "python-dotenv>=1.2.2",
    "grandalf>=0.8",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "src*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ipykernel>=6.29.0",
]
